--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ celery==4.3.0
 Django==2.2.1
 django-celery==3.1.0
 kombu==4.5.0
-python-decouple==3.1
 pytz==2019.1
 redis==3.2.1
 sqlparse==0.3.0
 vine==1.3.0
 youtube-dl==2019.5.20
+mysqlclient==1.4.2.post1
+django-environ==0.4.5
+django-dotenv==1.4.2
